<resources>
    <string name="app_name">Course Planning</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_select_a_course">Please select a course:</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="subject">Subject</string>
    <string name="course_title">Course Title</string>
    <string name="choose_your_major">Choose your major</string>
    <string name="start_year">Start Year</string>
    <string name="start_semester">Start Semester</string>
    <string name="courses_per_semester">Courses per semester</string>
    <string name="i_m_ready">I\'m Ready !</string>
    <string name="_2020">2020</string>
    <string name="sum">Sum.</string>
    <string name="cmpt">CMPT</string>
    <string name="_120">120</string>
    <string name="intro_cmpt_sci_programming_i">Intro.Cmpt.Sci/Programming I</string>
</resources>
